syntax = "proto3";

package service;

option go_package = "github.com/fathurzoy/go-grpc-ecommerce-be/pb/service";

service HelloWorldService {
  rpc HelloWorld (HelloWolrdRequest) returns (HelloWorldResponse);
}

message HelloWolrdRequest {
  string name = 1;
}

message HelloWorldResponse {
  string message = 1;
}